--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
 
-<body>
+<body style="overflow-x:hidden;">
     
         <div id="preloader"></div>
         <div class='main-page'>
