--- a/index.html
+++ b/index.html
@@ -20,28 +20,28 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
 
-<body style="overflow-x:hidden;">
-    
-        <div id="preloader"></div>
-        <div class='main-page'>
-            <img src="img/Group of 757 Objects.svg" style="opacity: 0.9; position: fixed;top:0%;left: 0.1px;width: 40%;"
-                alt="">
-            <img src="img/Group of 624 Objects.svg"
-                style="opacity: 0.9; position: fixed;bottom:0%;right: 0.1px;width: 40%;" alt="">
-            <div class="main-first text-secondary" style="margin: 0 auto;align-items: middle;margin-top: 45%;">
+<body>
+
+    <div id="preloader"></div>
+    <div class='main-page'>
+        <img src="img/Group of 757 Objects.svg" style="opacity: 0.9; position: fixed;top:0%;left: 0.1px;width: 40%;"
+            alt="">
+        <img src="img/Group of 624 Objects.svg" style="opacity: 0.9; position: fixed;bottom:0%;right: 0.1px;width: 40%;"
+            alt="">
+        <div class="main-first text-secondary" style="margin: 0 auto;align-items: middle;margin-top: 45%;">
 
 
-                <h2 style="font-size: 30px;">You're Invited</h2>
-                <h2>The Wedding Celebration Of</h2>
-                <H1>Olivia & Aldi</H1>
-                <h4 data-aos="zoom-in" data-aos-anchor="#triggerr" class="text-center ">Dear</h4>
-                <h2 data-aos="fade-down" data-aos-anchor="#triggerr" class="text-center " id="nama"></h2><br>
+            <h2 style="font-size: 30px;">You're Invited</h2>
+            <h2>The Wedding Celebration Of</h2>
+            <H1>Olivia & Aldi</H1>
+            <h4 data-aos="zoom-in" data-aos-anchor="#triggerr" class="text-center ">Dear</h4>
+            <h2 data-aos="fade-down" data-aos-anchor="#triggerr" class="text-center " id="nama"></h2><br>
 
-                <a href="#tes"><button id='get-started' class="btn btn-primary">Open Invitation &nbsp;<i
-                            class="bi bi-envelope-paper-fill"></i></button></a>
-            </div>
-
+            <a href="#tes"><button id='get-started' class="btn btn-primary">Open Invitation &nbsp;<i
+                        class="bi bi-envelope-paper-fill"></i></button></a>
         </div>
+
+    </div>
     </div>
     </div>
     <img src="img/Group of 624 Objects.svg"
@@ -183,7 +183,7 @@
                         style="max-width: 400px;margin: 0 auto;background-color: transparent;border: none;">
                         <img src="img/top.svg" class="px-4" alt="" style="max-width: 400px;">
                         <div class="border border-secondary border-bottom-0 rounded-top-5">
-                            <div class="info p-4 " data-aos="fade-left" style="margin: 0 auto;">
+                            <div class="info p-4 " data-aos="fade-up" style="margin: 0 auto;">
                                 <h3 class="text-center"><b>Akad</b></h3>
                                 <p class="text-primary"><span><i
                                             class=" text-secondary bi-clock-fill"></i></span>&nbsp;&nbsp; Minggu 15
@@ -214,7 +214,7 @@
                         style="max-width: 400px;margin: 0 auto;background-color: transparent;border: none;">
                         <div class="border border-secondary border-top-0 rounded-bottom-5">
                             <img src="img/top.svg" alt="" class="ms py-4 " style="max-width: 400px;">
-                            <div class="info p-3 " data-aos="fade-right" style="margin: 0 auto;">
+                            <div class="info p-3 " data-aos="fade-down" style="margin: 0 auto;">
                                 <h3 class="text-center"><b>Resepsi</b></h3>
                                 <p class="text-primary"><span><i
                                             class=" text-secondary bi-clock-fill"></i></span>&nbsp;&nbsp; Minggu 15
@@ -248,14 +248,14 @@
             </div>
             <div class="row">
                 <div class="col-6">
-                    <img src="img/oliv9.JPG" data-aos="fade-right" class="img-fluid shadow mb-4" alt="">
-                    <img src="img/oliv0.JPG" data-aos="fade-right" class="img-fluid shadow mb-4" alt="">
-                    <img src="img/oliv5.JPG" data-aos="fade-right" class="img-fluid shadow mb-4" alt="">
+                    <img src="img/oliv9.JPG" data-aos="fade-down" class="img-fluid shadow mb-4" alt="">
+                    <img src="img/oliv0.JPG" data-aos="fade-down" class="img-fluid shadow mb-4" alt="">
+                    <img src="img/oliv5.JPG" data-aos="fade-down" class="img-fluid shadow mb-4" alt="">
                 </div>
                 <div class="col-6">
-                    <img src="img/oliv1.JPG" data-aos="fade-left" class="img-fluid shadow mb-4" alt="">
-                    <img src="img/oliv4.JPG" data-aos="fade-left" class="img-fluid shadow mb-4" alt="">
-                    <img src="img/oliv6.JPG" data-aos="fade-left" class="img-fluid shadow mb-4" alt="">
+                    <img src="img/oliv1.JPG" data-aos="fade-up" class="img-fluid shadow mb-4" alt="">
+                    <img src="img/oliv4.JPG" data-aos="fade-up" class="img-fluid shadow mb-4" alt="">
+                    <img src="img/oliv6.JPG" data-aos="fade-up" class="img-fluid shadow mb-4" alt="">
                 </div>
 
             </div>
@@ -264,7 +264,7 @@
 
 
         <h2 data-aos="fade-in" class="text-center text-secondary mt-5 ">Virtual Blessing</h2>
-        <center><img data-aos="fade-down" src="img/aft.svg" class="mb-4" alt="" style="width: 200px;"></center>
+        <center><img data-aos="fade-in" src="img/aft.svg" class="mb-4" alt="" style="width: 200px;"></center>
 
 
         <div id="carouselExample" class="carousel slide" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
@@ -415,7 +415,7 @@
 
             </div>
         </div>
-   
+    </div>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/tampil_nama.js"></script>
@@ -528,8 +528,8 @@
         AOS.init();
         AOS.init({
             duration: 2000,
-            startEvent: 'ContentLoaded',
-            offset: 20,
+            startEvent: '.con',
+
             miror: true
         })
     </script>
